src/components/header/header.styles.css
.header {
  width: 100vw;
  margin-bottom: 1rem;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
}

.title-container {
  padding: 0.5rem 1.5rem;
  background: #bf00ff;
  width: 400px;
  max-width: 600px;
}

.title-container a {
  height: 100%;
}

#title {
  width: 100%;
}

.social-links {
  display: flex;
  align-items: center;
  padding: 1rem;
}

.social-links i {
  font-size: 2rem;
  color: #fff;
}

